[package]
name = "libsixel-sys"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings for libsixel"
repository = "https://github.com/ShreyJ1729/libsixel-sys/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.79"
glob = "0.3.1"
